PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.0.2
- Fixed a file-descriptor leak with phpinfo() and other 'special' URLs (Zeev)
- Added PHP_EOL constant that contains the OS way of representing newlines.
  (Paul Hudson, Derick)
- Fixed bug #29678 (opendir() with ftp:// wrapper segfaults if path does not
  have trailing slash). (Ilia)
- Fixed bug #29656 (segfault on result and statement properties). (Georg)
- Fixed bug #29447 (Reflection API issues). (Marcus)

12 Aug 2004, PHP 5.0.1
- Changed destructor mechanism so that destructors are called prior to request
  shutdown. (Marcus)
- Rewritten UNIX and Windows install help files. (Documentation Team)
- Updated several libraries bundled with the windows release which now 
  includes libxml2-2.6.11, libxslt-1.1.7 and iconv-1.9.1. (Rob, Edin)
- Improved and moved ActiveScript SAPI to PECL.  (Wez)
- Fixed bug #29606 (php_strip_whitespace() prints to stdout rather then
  returning the value). (Ilia)
- Fixed bug #29577 (MYSQLI_CLIENT_FOUND_ROWS undefined) (Georg)
- Fixed bug #29573 (Segmentation fault, when exception thrown within
  PHP function called from XSLT). (Christian)
- Fixed bug #29522 (accessing properties without connection) (Georg)
- Fixed bug #29505 (get_class_vars() severely broken when used with arrays).
  (Marcus)
- Fixed bug #29490 (.Net object instantiation failed). (Michael Sisolak).
- Fixed bug #29474 (win32: usleep() doesn't work). (Wez)
- Fixed bug #29449 (win32: feof() hangs on empty tcp stream). (Wez)
- Fixed bug #29437 (Possible crash inside array_walk_recursive()). (Ilia)
- Fixed bug #29431 (crash when parsing invalid address; invalid address
  returned by stream_socket_recvfrom(), stream_socket_getname()). (Wez)
- Fixed bug #29409 (Segfault in PHP functions called from XSLT). (Rob)
- Fixed unloading of dynamically loaded extensions. 